# markdown_linker

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
Jupyter/: Untitled.ipynb
src/: BackMermaid.py  Backlink.py  BacklinkingMermaid.txt  CreateMermaid.py
src/backlinks/: backlinks.py
src/backlinks/collector/: __init__.py  book.py  callabledict.py  document.py  documentdic.py
src/backlinks/core/: linkage.py
src/backlinks/io/: __init__.py  csv.py  document.py  markdown.py
src/backlinks/logging/: __init__.py  logging.py
src/backlinks/markdown/: __init__.py  markdown.py
src/backlinks/path/: __init__.py  path.py
src/backlinks/yaml/: __init__.py
